--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
