--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -56,6 +56,10 @@
             <version>5.7.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
