--- a/agregador/src/main/resources/application.properties
+++ b/agregador/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=agregador
-server.port=8081
+server.port=8080
+spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.serialization.fail-on-empty-beans=false
