--- a/normalizador/pom.xml
+++ b/normalizador/pom.xml
@@ -5,22 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <modules>
-        <module>dinamica</module>
-        <module>estatica</module>
-        <module>proxy</module>
-        <module>agregador</module>
-        <module>normalizador</module>
-    </modules>
     <groupId>ar.edu.utn.frba.ddsi</groupId>
-    <artifactId>metamapa</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>normalizador</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>metamapa</name>
-    <description>metamapa</description>
+    <name>normalizador</name>
+    <description>normalizador</description>
     <url/>
     <licenses>
         <license/>
@@ -47,6 +39,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
     </dependencies>
 
