--- a/dinamica/src/main/resources/application.properties
+++ b/dinamica/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=dinamica
 server.port=8082
+spring.datasource.url=jdbc:mysql://localhost:3306/dinamica_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
