--- a/visualizador/package.json
+++ b/visualizador/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -10,6 +11,7 @@
     "axios": "^1.13.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8",
+    "keycloak-js": "^26.2.1",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
