--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=api-gateway
 server.port=8089
 
+# --- Configuración de CORS Global ---
+
+# 1. Habilita la configuración global de CORS
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+
+# 2. Define la política de CORS
+# Asume que se aplica a todas las rutas [/**]
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:3000
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
 
 
 
