Todas las rutas se levantan de los archivos de config, mini refactor en importador y conversor para que levante de los server.properties las url. Pushee el .env para que sepan el formato que debe tener

--- a/agregador/src/main/resources/application.properties
+++ b/agregador/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.http.codecs.max-in-memory-size=10MB
+estatica.url=http://localhost:8081
+dinamica.url=http://localhost:8082
+proxy.url=http://localhost:8083
+normalizador.url=http://localhost:8087
+
