--- a/proxy/src/main/resources/application.properties
+++ b/proxy/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=proxy
 server.error.include-message=always
 server.port=8083
+
+metamapa.instancia.url=http://localhost:8092
