--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -32,4 +32,4 @@ spring.cloud.gateway.routes[2].uri=${dinamica.url}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/dinamica/**
 
 # Seguridad JWT (Keycloak)
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.url}/realms/MetaMapa
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL}
