Correcciones, intento de aceptar issuer de varias urls

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,14 @@ services:
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.0.4
-    command: start-dev --http-port 9090 --hostname-strict=false
+    command: start-dev --http-port 9090 --hostname-strict=false --hostname=localhost
     environment:
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 9090
+      KC_HTTP_ENABLED: "true"
+      KC_HOSTNAME_STRICT: "false"
     volumes:
       - keycloak_data:/opt/keycloak/data
     ports:
@@ -45,11 +49,16 @@ services:
     container_name: api-gateway
     restart: always
     env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
-      estadistica.url: http://estadistica:8088
-      dinamica.url: http://dinamica:8082
-      agregador.url: http://agregador:8080
-      keycloak.url: ${KEYCLOAK_URL}
+      ESTADISTICA_URL: ${ESTADISTICA_URL}
+      DINAMICA_URL: ${DINAMICA_URL}
+      AGREGADOR_URL: ${AGREGADOR_URL}
+      KEYCLOAK_URL: ${KEYCLOAK_URL}
+      KEYCLOAK_JWK_SET_URI: ${KEYCLOAK_JWK_SET_URI}
+      KEYCLOAK_VALID_ISSUERS: ${KEYCLOAK_VALID_ISSUERS}
+      REACT_APP_API_URL: ${REACT_APP_API_URL}
     depends_on:
       keycloak:
         condition: service_started
@@ -76,10 +85,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_DINAMICA}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      gestor-personas.url: http://gestor-personas:8091
-      supabase.url: ${SUPABASE_URL}
-      supabase.bucket: ${SUPABASE_BUCKET}
-      supabase.service-key: ${SUPABASE_SERVICE_KEY}
+      GESTOR_PERSONAS_URL: ${GESTOR_PERSONAS_URL}
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_BUCKET: ${SUPABASE_BUCKET}
+      SUPABASE_SERVICE_KEY: ${SUPABASE_SERVICE_KEY}
     depends_on:
       mysql:
         condition: service_healthy
@@ -89,7 +98,10 @@ services:
     container_name: proxy
     restart: always
     environment:
-      metamapa.instancia.url: http://proxyEjemplo:8092
+      METAMAPA_INSTANCIA_URL: ${METAMAPA_INSTANCIA_URL}
+    depends_on:
+      proxyEjemplo:
+        condition: service_started
 
   proxyEjemplo:
     build: ./proxyEjemplo
@@ -111,10 +123,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_AGREGADOR}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      estatica.url: http://estatica:8081
-      dinamica.url: http://dinamica:8082
-      proxy.url: http://proxy:8083
-      normalizador.url: http://normalizador:8087
+      ESTATICA_URL: ${ESTATICA_URL}
+      DINAMICA_URL: ${DINAMICA_URL}
+      PROXY_URL: ${PROXY_URL}
+      NORMALIZADOR_URL: ${NORMALIZADOR_URL}
     depends_on:
       mysql:
         condition: service_healthy
@@ -136,7 +148,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_ESTADISTICA}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      agregador.url: http://agregador:8080
+      AGREGADOR_URL: ${AGREGADOR_URL}
     depends_on:
       mysql:
         condition: service_healthy
@@ -160,6 +172,8 @@ services:
     build: ./visualizador
     image: metamapa-grupo10-frontend
     container_name: frontend
+    environment:
+      REACT_APP_API_GATEWAY_URL_BASE: ${REACT_APP_API_GATEWAY_URL_BASE}
     restart: always
     ports:
       - "${FRONTEND_PORT}:80"
