--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,18 @@ MYSQL_DB_GESTOR=gestor_db
 # Keycloak (URL pública del realm MetaMapa)
 KEYCLOAK_URL=http://keycloak:9090/realms/MetaMapa
 
+# Keycloak - Issuers válidos (separados por coma)
+# En desarrollo: http://localhost:9090/realms/MetaMapa,http://host.docker.internal:9090/realms/MetaMapa
+# En producción: https://auth.metamapa.com/realms/MetaMapa
+KEYCLOAK_VALID_ISSUERS=http://localhost:9090/realms/MetaMapa,http://host.docker.internal:9090/realms/MetaMapa
+
+# Keycloak - URL para JWK Set (claves públicas)
+# En desarrollo: http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
+# En producción: https://auth.metamapa.com/realms/MetaMapa/protocol/openid-connect/certs
+KEYCLOAK_JWK_SET_URI=http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
+
 # Supabase (servicio multimedia usado por dinamica)
-SUPABASE_URL=https://your-supabase-url.example.com
+SUPABASE_URL=https://ycewwqszmnadqvimhdpx.supabase.co/
 SUPABASE_BUCKET=multimedia
 SUPABASE_SERVICE_KEY=change_me
 
