--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,25 +11,30 @@ keycloak.url=${KEYCLOAK_URL}
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 
 # Politica de CORS
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=${visualizador.url}
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=${REACT_APP_API_URL}
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
 
 # Rutas agregador
 spring.cloud.gateway.routes[0].id=agregador
-spring.cloud.gateway.routes[0].uri=${agregador.url}
+spring.cloud.gateway.routes[0].uri=${AGREGADOR_URL}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/agregador/**
 
 # Rutas estadistica
 spring.cloud.gateway.routes[1].id=estadisticas
-spring.cloud.gateway.routes[1].uri=${estadistica.url}
+spring.cloud.gateway.routes[1].uri=${ESTADISTICA_URL}
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/estadisticas/**
 
 # Rutas dinamica
 spring.cloud.gateway.routes[2].id=dinamica
-spring.cloud.gateway.routes[2].uri=${dinamica.url}
+spring.cloud.gateway.routes[2].uri=${DINAMICA_URL}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/dinamica/**
 
 # Seguridad JWT (Keycloak)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL}
+
+# Keycloak JWT Configuration
+keycloak.url=${KEYCLOAK_URL}
+keycloak.jwk-set-uri=${KEYCLOAK_JWK_SET_URI}
+keycloak.valid-issuers=${KEYCLOAK_VALID_ISSUERS}
