Configurar Keycloak con URLs pública e interna

--- a/.env.example
+++ b/.env.example
@@ -8,18 +8,22 @@ MYSQL_DB_DINAMICA=dinamica_db
 MYSQL_DB_ESTADISTICA=estadistica_db
 MYSQL_DB_GESTOR=gestor_db
 
-# Keycloak (URL pública del realm MetaMapa)
-KEYCLOAK_URL=http://keycloak:9090/realms/MetaMapa
+# Keycloak (config pública e interna)
+KEYCLOAK_REALM=MetaMapa
+# URL pública (la que usa el navegador y se escribe como issuer en el token)
+KEYCLOAK_REALM_URL_PUBLIC=http://localhost:9090/realms/MetaMapa
+# URL interna (para llamadas desde contenedores)
+KEYCLOAK_REALM_URL_INTERNAL=http://keycloak:9090/realms/MetaMapa
+# Host/URL base del frontend de Keycloak (se usa para KC_HOSTNAME_URL)
+KEYCLOAK_FRONTEND_HOST=localhost
+KEYCLOAK_FRONTEND_URL=http://localhost:9090
 
-# Keycloak - Issuers válidos (separados por coma)
-# En desarrollo: http://localhost:9090/realms/MetaMapa,http://host.docker.internal:9090/realms/MetaMapa
-# En producción: https://auth.metamapa.com/realms/MetaMapa
-KEYCLOAK_VALID_ISSUERS=http://localhost:9090/realms/MetaMapa,http://host.docker.internal:9090/realms/MetaMapa
+# Issuers válidos (separados por coma). Incluí la URL pública y, si querés, la interna.
+KEYCLOAK_VALID_ISSUERS=http://localhost:9090/realms/MetaMapa,http://keycloak:9090/realms/MetaMapa
 
-# Keycloak - URL para JWK Set (claves públicas)
-# En desarrollo: http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
-# En producción: https://auth.metamapa.com/realms/MetaMapa/protocol/openid-connect/certs
-KEYCLOAK_JWK_SET_URI=http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
+# JWK Set (público e interno)
+KEYCLOAK_JWK_SET_URI_PUBLIC=http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
+KEYCLOAK_JWK_SET_URI_INTERNAL=http://keycloak:9090/realms/MetaMapa/protocol/openid-connect/certs
 
 # Supabase (servicio multimedia usado por dinamica)
 SUPABASE_URL=https://ycewwqszmnadqvimhdpx.supabase.co/
@@ -29,8 +33,10 @@ SUPABASE_SERVICE_KEY=change_me
 # Puertos expuestos (solo API Gateway y frontend deberían ser públicos)
 GATEWAY_PORT=8089
 FRONTEND_PORT=3000
-REACT_APP_API_URL=http://localhost:8089
+REACT_APP_API_URL=http://localhost:3000
+REACT_APP_API_GATEWAY_URL_BASE=http://localhost:${GATEWAY_PORT}
 REACT_APP_KEYCLOAK_CLIENT_ID=metamapa-frontend
+REACT_APP_KEYCLOAK_URL_BASE=http://localhost:9090
 
 AGREGADOR_URL=http://localhost:8080
 ESTATICA_URL=http://localhost:8081
