--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,7 +5,7 @@ visualizador.url=${REACT_APP_API_URL}
 agregador.url=${AGREGADOR_URL}
 estadistica.url=${ESTADISTICA_URL}
 dinamica.url=${DINAMICA_URL}
-keycloak.url=${KEYCLOAK_URL}
+keycloak.url=${KEYCLOAK_REALM_URL_PUBLIC:${KEYCLOAK_URL}}
 
 # --- Configuracion de CORS Global ---
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
@@ -32,9 +32,9 @@ spring.cloud.gateway.routes[2].uri=${DINAMICA_URL}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/dinamica/**
 
 # Seguridad JWT (Keycloak)
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_REALM_URL_PUBLIC:${KEYCLOAK_URL}}
 
 # Keycloak JWT Configuration
-keycloak.url=${KEYCLOAK_URL}
-keycloak.jwk-set-uri=${KEYCLOAK_JWK_SET_URI}
-keycloak.valid-issuers=${KEYCLOAK_VALID_ISSUERS}
+keycloak.url=${KEYCLOAK_REALM_URL_PUBLIC:${KEYCLOAK_URL}}
+keycloak.jwk-set-uri=${KEYCLOAK_JWK_SET_URI_INTERNAL:${KEYCLOAK_JWK_SET_URI_PUBLIC:${KEYCLOAK_JWK_SET_URI}}}
+keycloak.valid-issuers=${KEYCLOAK_VALID_ISSUERS:${KEYCLOAK_REALM_URL_PUBLIC:${KEYCLOAK_URL}}}
