--- a/.env
+++ b/.env
@@ -8,11 +8,22 @@ MYSQL_DB_DINAMICA=dinamica_db
 MYSQL_DB_ESTADISTICA=estadistica_db
 MYSQL_DB_GESTOR=gestor_db
 
-# Keycloak (URL pública del realm MetaMapa)
-KEYCLOAK_DOMAIN="host.docker.internal" # Dev
-KEYCLOAK_URL=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa
-KEYCLOAK_VALID_ISSUERS=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa
-KEYCLOAK_JWK_SET_URI=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa/protocol/openid-connect/certs
+# Keycloak (config pública e interna)
+KEYCLOAK_REALM=MetaMapa
+# URL pública (la que usa el navegador y queda como issuer en el token)
+KEYCLOAK_REALM_URL_PUBLIC=http://localhost:9090/realms/MetaMapa
+# URL interna (para que los contenedores resuelvan Keycloak por DNS interno)
+KEYCLOAK_REALM_URL_INTERNAL=http://keycloak:9090/realms/MetaMapa
+# Host/URL base del frontend de Keycloak (se usa para KC_HOSTNAME_URL)
+KEYCLOAK_FRONTEND_HOST=localhost
+KEYCLOAK_FRONTEND_URL=http://localhost:9090
+
+# Issuers válidos (separados por coma). Incluí la URL pública y, si querés, la interna.
+KEYCLOAK_VALID_ISSUERS=http://localhost:9090/realms/MetaMapa,http://keycloak:9090/realms/MetaMapa
+
+# JWK Set (público e interno)
+KEYCLOAK_JWK_SET_URI_PUBLIC=http://localhost:9090/realms/MetaMapa/protocol/openid-connect/certs
+KEYCLOAK_JWK_SET_URI_INTERNAL=http://keycloak:9090/realms/MetaMapa/protocol/openid-connect/certs
 
 # Supabase (servicio multimedia usado por dinamica)
 SUPABASE_URL=https://ycewwqszmnadqvimhdpx.supabase.co/
@@ -26,6 +37,7 @@ FRONTEND_PORT=3000
 REACT_APP_API_URL=http://localhost:3000
 REACT_APP_API_GATEWAY_URL_BASE=http://localhost:${GATEWAY_PORT}
 REACT_APP_KEYCLOAK_CLIENT_ID=metamapa-frontend
+REACT_APP_KEYCLOAK_URL_BASE=http://localhost:9090
 
 ESTATICA_URL=http://estatica:8081
 DINAMICA_URL=http://dinamica:8082
