Fix: Ahora funciona las url de api-gateway con keycloak. Hay que buscar una manera de hacer un script para que se cree el realm, el cliente metamapa-frontend, que se configue el SSO, etc.

--- a/.env
+++ b/.env
@@ -8,11 +8,17 @@ MYSQL_DB_DINAMICA=dinamica_db
 MYSQL_DB_ESTADISTICA=estadistica_db
 MYSQL_DB_GESTOR=gestor_db
 
-# Keycloak (URL pública del realm MetaMapa)
-KEYCLOAK_DOMAIN="host.docker.internal" # Dev
-KEYCLOAK_URL=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa
-KEYCLOAK_VALID_ISSUERS=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa
-KEYCLOAK_JWK_SET_URI=https://${KEYCLOAK_DOMAIN}/realms/MetaMapa/protocol/openid-connect/certs
+# Esta es la URL que el api-gateway (Spring) usa para BAJAR las claves
+# DEBE usar el nombre del servicio 'keycloak'
+KEYCLOAK_JWK_SET_URI=http://keycloak:9090/realms/MetaMapa/protocol/openid-connect/certs
+
+# Estas son las URLs que el api-gateway considera VÁLIDAS como emisores del token
+# Tu config los separa por coma (localhost para el navegador, keycloak para la red interna)
+KEYCLOAK_VALID_ISSUERS=http://localhost:9090/realms/MetaMapa,http://keycloak:9090/realms/MetaMapa
+
+# Esta es la URL de validación general (usada por el gateway)
+KEYCLOAK_URL=http://keycloak:9090/realms/MetaMapa
+
 
 # Supabase (servicio multimedia usado por dinamica)
 SUPABASE_URL=https://ycewwqszmnadqvimhdpx.supabase.co/
