--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ﻿spring.application.name=api-gateway
 server.port=8089
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
 
 visualizador.url=${REACT_APP_API_URL}
 agregador.url=${AGREGADOR_URL}
 estadistica.url=${ESTADISTICA_URL}
 dinamica.url=${DINAMICA_URL}
-keycloak.url=${KEYCLOAK_URL}
 
 # --- Configuracion de CORS Global ---
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
